fix: invisible full screen button on hover

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -223,3 +223,13 @@ input[type="datetime-local"] {
         }
     }
 }
+
+.btn-full-screen:hover:not(:active) {
+    svg {
+        --hover-color: var(--bs-body-color);
+
+        // https://stackoverflow.com/questions/18330344/how-to-add-border-outline-stroke-to-svg-elements-in-css#:~:text=%23example_1%20%7B%0A%20%20filter%3A%20%0A%20%20%20%20drop%2Dshadow(%2D1px%20%2D1px%200px%20%233e68ff)%20%0A%20%20%20%20drop%2Dshadow(2px%20%2D1px%200px%20%233e68ff)%20%0A%20%20%20%20drop%2Dshadow(2px%202px%200px%20%233e68ff)%0A%20%20%20%20drop%2Dshadow(%2D1px%202px%200px%20%233e68ff)%0A%7D
+        filter:
+            drop-shadow(-1px -1px 0px var(--hover-color)) drop-shadow(2px -1px 0px var(--hover-color)) drop-shadow(2px 2px 0px var(--hover-color)) drop-shadow(-1px 2px 0px var(--hover-color))
+    }
+}
